# pfish_bovespa

./: AUTHORS  COPYING  Makefile.am  README  bootstrap.sh  configure.ac  database_init.c  file_import.c  index.html  library_info.c  pfish_bovespa.c  revision_marker.c  revision_marker.h  stock_history.c  stock_list.c
pilot_fish/: bovespa.h  bovespa_stdint.h
scripts/: bdi_06_pdftocotahist.sh  bdi_06_pdftotext.sh  database_update.sh
